Update dotfiles from MF arch

--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -7,7 +7,8 @@
 #: characters.
 
 # TX-02-SemiCondensed is actually a modified (semi-condensed) version of Berkeley Mono
-font_family      TX-02
+# font_family     TX-02
+font_family     Berkeley Mono
 # bold_font        TX-02-BoldSemiCondensed
 # italic_font      TX-02-ObliqueSemiCondensed
 # bold_italic_font TX-02-BoldSemiCondensedOblique
@@ -1365,6 +1366,9 @@ map ctrl+shift+f launch --stdin-source=@screen_scrollback --stdin-add-formatting
 #include ./kitty-themes/themes/Dracula.conf
 
 cursor_trail 1
+
+text_gagmma_adjustment 1.7
+text_contrast 30
 
 # noirblaze now comes with kitty
 # to use it, run:
