--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -1369,6 +1369,7 @@ cursor_trail 1
 
 text_gagmma_adjustment 1.7
 text_contrast 30
+text_composition_strategy legacy
 
 # noirblaze now comes with kitty
 # to use it, run:
