Add kitty scrollback nvim, modify noirblaze to better support jj

--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -821,7 +821,7 @@ tab_bar_style separator
 #: to yes means that any background processes still using the terminal
 #: can fail silently because their stdout/stderr/stdin no longer work.
 
-# allow_remote_control no
+allow_remote_control socket-only
 
 #: Allow other programs to control kitty. If you turn this on other
 #: programs can control all aspects of kitty, including sending text
@@ -834,7 +834,8 @@ tab_bar_style separator
 #: you want to prevent programs running on a remote computer over ssh
 #: from controlling kitty.
 
-# listen_on none
+listen_on unix:/tmp/kitty
+shell_integration enabled
 
 #: Tell kitty to listen to the specified unix/tcp socket for remote
 #: control connections. Note that this will apply to all kitty
@@ -1074,6 +1075,16 @@ tab_bar_style separator
 
 # Search in less (case insensitive)
 map ctrl+shift+f launch --stdin-source=@screen_scrollback --stdin-add-formatting --type=overlay less -i +G -R
+
+# kitty-scrollback.nvim Kitten alias
+action_alias kitty_scrollback_nvim kitten /home/ddimitrov/.local/share/nvim/lazy/kitty-scrollback.nvim/python/kitty_scrollback_nvim.py
+# Browse scrollback buffer in nvim
+map kitty_mod+h kitty_scrollback_nvim
+# Browse output of the last shell command in nvim
+map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
+# Show clicked command output in nvim
+mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
+
 # Search in fzf
 # map ctrl+shift+f launch --type=overlay --stdin-source=@screen_scrollback /usr/bin/fzf --no-sort --no-mouse --exact -i
 
