Make Ctrl+Backspace delete the previous word in kitty

--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -1085,6 +1085,10 @@ map kitty_mod+g kitty_scrollback_nvim --config ksb_builtin_last_cmd_output
 # Show clicked command output in nvim
 mouse_map ctrl+shift+right press ungrabbed combine : mouse_select_command_output : kitty_scrollback_nvim --config ksb_builtin_last_visited_cmd_output
 
+# Map ctrl+backspace to send a Ctrl+W to the terminal
+# This is useful for deleting the previous word in the terminal.
+map ctrl+backspace send_text all \x17
+
 # Search in fzf
 # map ctrl+shift+f launch --type=overlay --stdin-source=@screen_scrollback /usr/bin/fzf --no-sort --no-mouse --exact -i
 
