Add pixel scrolling to kitty update Neovim deps

--- a/kitty/arch/kitty.conf
+++ b/kitty/arch/kitty.conf
@@ -1381,6 +1381,7 @@ map ctrl+backspace send_text all \x17
 #include ./kitty-themes/themes/Dracula.conf
 
 cursor_trail 1
+pixel_scroll true
 
 text_gagmma_adjustment 1.7
 text_contrast 30
